--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.28",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7"
   }
 }
