--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "handlebars": "^4.7.6",
     "http-errors": "~1.6.3",
+    "mongodb": "^4.0.1",
     "mongoose": "^5.9.28",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
